src/objects/Contact_Connector__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>R00N70000001ay05EAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>R00N70000001ay0PEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>R00N70000001ay0BEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Title__c</fullName>
        <label>Role/Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Connector</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Contact Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>